@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::CaptchaPNG
 
 {{$NEXT}}
+        - Remove Math::Random::Secure dependency
 
 1.03      2025-02-05 10:57:16-08:00 America/Los_Angeles
         - Add set_captcha_value (for easier testing, I guess)
